tests/golden/type_errors/inferred_let_number_assignment_mismatch.cd
let x = 1;
x = "oops";
